<resources>
    <string name="app_name">FilmingApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Filming</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_peliculas">Películas</string>
    <string name="menu_series">Series</string>
    <string name="titulo">TITULO</string>
    <string name="director">DIRECTOR</string>
    <string name="reparto">REPARTO</string>
    <string name="clasificacion">Clasificación:</string>
    <string name="sinopsis">SINOPSIS</string>
    <string name="numTemporadas">Número de temporadas:</string>
    <string name="boton">Volver</string>
    <string name="portada">Películas &amp; Series</string>
</resources>